arregla securuty config